# SPDX-License-Identifier: MIT

[package]
name = "wot-coap-dns-sd"
version = "0.1.0"
description = "A Basic WoT CoAP Server supporting DNS-SD"
repository = "https://github.com/JKRhb/wot-coap-dns-sd"
edition = "2021"
license = "MIT"

[dependencies]
coap = "0.13.0"
coap-lite = "0.11.3"
local-ip-address = "0.5.1"
mdns-sd = "0.9.2"
serde_json = "1.0.93"
tokio = "1.25.0"
wot-td = "0.3.1"

[patch.crates-io]
mdns-sd = { git = 'https://github.com/keepsimple1/mdns-sd.git', branch = 'remove-panic' }
