# SPDX-License-Identifier: MIT

[package]
name = "wot-coap-dns-sd"
version = "0.1.0"
description = "A Basic WoT CoAP Server supporting DNS-SD"
repository = "https://github.com/JKRhb/wot-coap-dns-sd"
edition = "2021"
license = "MIT"

[dependencies]
coap = "0.19.0"
coap-lite = "0.11.3"
local-ip-address = "0.6.3"
mdns-sd = "0.11.5"
serde_json = "1.0.132"
tokio = "1.41.0"
wot-td = "0.5.0"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",
    "fast-rng",
]
